2nd Commit: add Service, About, Revies nd Newsletter

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </section>
 
-    <section class="ride">
+    <section class="ride" id="ride">
       <div class="heading">
         <span>How Its Work</span>
         <h1>Rent with 3 easy Steps</h1>
@@ -96,6 +96,180 @@
         </div>
       </div>
     </section>
+
+    <section class="services" id="services">
+      <div class="heading">
+        <span>Best Services</span>
+        <h1>
+          Explore Out Top Deals <br />
+          From Top Rated Dealers
+        </h1>
+      </div>
+      <div class="services-container">
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car1.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car2.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car3.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car4.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car5.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="box">
+          <div class="box-img">
+            <img src="img/car6.jpg" />
+          </div>
+          <p>2017</p>
+          <h3>2018 Honda Civic</h3>
+          <h2>$58500 | $358 <span>/month</span></h2>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="about" id="about">
+      <div class="heading">
+        <span>About Us</span>
+        <h1>Best Customer Experience</h1>
+      </div>
+      <div class="about-contianer">
+        <div class="about-img">
+          <img src="img/about.png" alt="" />
+        </div>
+        <div class="about-text">
+          <span>About Us</span>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Laudantium, est
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.
+          </p>
+          <a href="#" class="btn">Learn More</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews" id="reviews">
+      <div class="heading">
+        <span>Reviews</span>
+        <h1>Whats Our Customer Say</h1>
+      </div>
+      <div class="reviews-container">
+        <div class="box">
+          <div class="rev-img">
+            <img src="img/rev1.jpg" alt="" />
+          </div>
+          <h2>Someone Name</h2>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+            optio officiis quisquam maiores possimus odio, accusamus quod alias.
+          </p>
+        </div>
+
+        <div class="box">
+          <div class="rev-img">
+            <img src="img/rev2.jpg" alt="" />
+          </div>
+          <h2>Someone Name</h2>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel amet
+            harum maiores aliquam mollitia iure expedita quos porro.
+          </p>
+        </div>
+
+        <div class="box">
+          <div class="rev-img">
+            <img src="img/rev3.jpg" alt="" />
+          </div>
+          <h2>Someone Name</h2>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+            atque? Sit ipsam animi, minima quisquam doloremque quasi culpa.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="newsletter">
+      <h2>Subscribe To Newsletter</h2>
+      <div class="box">
+        <input type="text" placeholder="Enter Your Email ..." />
+        <a href="#" class="btn">Subscribe</a>
+      </div>
+    </section>
+
+    <div class="copyright">
+      <p>&#169; CarUnauub All Right Reserved</p>
+      <div class="social">
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
