Last commit Yeaaay

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <a href="#"><i class="bx bxl-instagram"></i></a>
       </div>
     </div>
-
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
   </body>
 </html>
